force-app/main/default/objects/Health_Quiz_Progress__e/Health_Quiz_Progress__e.object-meta.xml
<CustomObject>
    <label>Health Quiz Progress</label>
    <pluralLabel>Health Quiz Progress Events</pluralLabel>
</CustomObject>