force-app/main/default/objects/Health_Quiz_Progress__e/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <label>Bundle Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>