force-app/main/default/objects/Health_Quiz_Progress__e/fields/Option_Label__c.field-meta.xml
<CustomField>
    <fullName>Option_Label__c</fullName>
    <label>Option Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>