force-app/main/default/objects/Health_Quiz_Progress__e/fields/Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Session_Key__c</fullName>
    <label>Session Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>