force-app/main/default/objects/Health_Quiz_Progress__e/fields/Step_Key__c.field-meta.xml
<CustomField>
    <fullName>Step_Key__c</fullName>
    <label>Step Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>